--- a/index.html
+++ b/index.html
@@ -50,37 +50,37 @@
 <tr>
 	<th title="0: How to prepare before joining the game.">Player Knowledge</th>
 	<td>
-		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you're familiar with similar genre fiction, you can learn the rules while you play."> GENRE: it's like that movie.</label>
-		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the key rules (or played a similar game) we can fill in the details."> BASICS: how the stats &amp; dice work.</label>
-		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon &amp; references, so you'll need to keep up."> MASTERY: rulebook cover to cover.</label>
+		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="You can learn the rules while you play."> GENRE: it's like that movie.</label>
+		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the rules, we'll fill in the details."> BASICS: how the stats &amp; dice work.</label>
+		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon; you need to keep up."> MASTERY: rulebook cover to cover.</label>
 	</td>
 	<td>
-		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="You're expected to know the setting from a book, movie, or previous game."> UNIVERSE: names, locations, lore.</label>
+		<input type="checkbox" name="f0" id="know-geo" value="0" /><label for="know-geo" title="Go watch the movie or read the book again."> UNIVERSE: names, locations, lore.</label>
 	</td>
 </tr>
 <tr>
 	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
-		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters and give them to the players."> PREGENERATED: read 'em &amp; weep.</label>
-		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We create characters collaboratively at the start of the game."> DAY ONE: made together as a group.</label>
-		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Create your character in advance so we can start playing right away."> ROLL YOUR OWN: bring 'em on.</label>
+		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters for the group."> PREGENERATED: <em>read 'em &amp; weep.</em></label>
+		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We share character ideas at the start."> DAY ONE: made together as a group.</label>
+		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Make your character in advance &amp; be ready to play."> ROLL YOUR OWN: <em>bring 'em on.</em></label>
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
 		<input type="checkbox" name="f1" id="pc0" value="0" /><label for="pc0" title="Who are you? Where are you from?"> DETAILED: history &amp; personality.</label>
 		<input type="checkbox" name="f2" id="pc1" value="1" /><label for="pc1" title="What do you want? Why are you here?"> MOTIVATED: desires &amp; plans.</label>
 		<input type="checkbox" name="f3" id="pc2" value="2" /><label for="pc2" title="How do your quirks &amp; foibles induce drama?"> FLAWED: characters with character.</label>
-		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other PCs?"> CONNECTED: inter-PC backstories.</label>
+		<input type="checkbox" name="f4" id="pc3" value="3" /><label for="pc3" title="When did you previously meet other characters?"> CONNECTED: inter-PC backstories.</label>
 		<input type="checkbox" name="f5" id="pc4" value="4" /><label for="pc4" title="Focus on power and efficiency, not personality."> OPTIMIZED: or you won't survive.</label>
 	</td>
 </tr>
 <tr>
 	<th title="2: How the PCs relate to the world.">Group vs Universe</th>
 	<td>
-		<input type="radio" name="q2" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation. Example: Star Trek."> TEAM: all for one &amp; one for all.</label>
-		<input type="radio" name="q2" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice. Example: Firefly."> ALLIED: common goals, limited disputes.</label>
-		<input type="radio" name="q2" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point. Example: soap operas."> NEUTRAL: varied agendas, cross purposes.</label>
-		<input type="radio" name="q2" id="group3" value="3" /><label for="group3" title="You use each other, until you can stab them. Example: Survivor."> OPPOSED: competition, frenemies.</label>
+		<input type="radio" name="q2" id="group0" value="0" /><label for="group0" title="You help each other, without hesitation."> TEAM: all for one &amp; one for all.</label>
+		<input type="radio" name="q2" id="group1" value="1" /><label for="group1" title="You need each other, so try to play nice."> ALLIED: common goals, limited disputes.</label>
+		<input type="radio" name="q2" id="group2" value="2" /><label for="group2" title="You tolerate each other, up to a point."> NEUTRAL: varied agendas, cross purposes.</label>
+		<input type="radio" name="q2" id="group3" value="3" /><label for="group3" title="You use each other, until you get your way."> OPPOSED: competition, frenemies.</label>
 	</td>
 	<td>
 		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label>
