--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	td { border: 1px #009900 dotted; padding: .2em; vertical-align: middle; text-align: left; }
 	th { background: #eeeeee; font-weight: normal; text-align: right; max-width: 10%; }
 	label { display: block; opacity: 0.5; max-width: 25rem; white-space: nowrap; overflow: hidden; text-overflow: clip; }
-	label abbr { font-size: .25rem; color: #006600; }
+	label abbr { font-size: .5rem; color: #006600; }
 	input[type=radio],input[type=checkbox] { float: left; }
-	input:checked + label { opacity: 1; background-color: #ffff77; white-space: unset; overflow: visible; }
+	input:checked + label { opacity: 1; background-color: #ffff77; max-width: 26rem; white-space: unset; overflow: visible; }
 	input:checked + label abbr { display: block; white-space: normal; font-size: 1rem; padding-left: .5rem; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99%; border: none; white-space: auto; }
 	textarea:hover,input:hover { box-shadow: inset 0 0 1ex rgba(0,0,255,0.5); }
@@ -21,7 +21,7 @@
 	.omit { margin: .5rem .1rem; }
 	a:hover { background-color: #ffeedd; }
 	#t0 { font-weight: bold; font-size: larger; text-align: center; }
-	#t2 { text-indent: 3ex; }
+	#t2 { text-indent: 1.5rem; }
 	#printbutton { border-radius: 1.5ex; padding: 0.5ex 1ex; font-family: inherit; font-size: inherit; }
 	@media print { 
 		html { font-size: 100%; }
@@ -50,7 +50,7 @@
 <tr>
 	<th title="0: How to prepare before joining the game.">Player Knowledge</th>
 	<td>
-		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="You can learn the rules while you play."> GENRE: it's like that movie.</label>
+		<input type="radio" name="q0" id="know0" value="0" /><label for="know0" title="If you get the plot, you can learn the rules while you play."> GENRE: it's like that movie.</label>
 		<input type="radio" name="q0" id="know1" value="1" /><label for="know1" title="If you've skimmed the rules, we'll fill in the details."> BASICS: how the stats &amp; dice work.</label>
 		<input type="radio" name="q0" id="know2" value="2" /><label for="know2" title="We use a lot of game jargon; you need to keep up."> MASTERY: rulebook cover to cover.</label>
 	</td>
@@ -62,7 +62,7 @@
 	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
 		<input type="radio" name="q1" id="pg0" value="0" /><label for="pg0" title="The Game Master will bring characters for the group."> PREGENERATED: <em>read 'em &amp; weep.</em></label>
-		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="We share character ideas at the start."> DAY ONE: made together as a group.</label>
+		<input type="radio" name="q1" id="pg1" value="1" /><label for="pg1" title="Collaborative creation adds character depth."> DAY ONE: made together as a group.</label>
 		<input type="radio" name="q1" id="pg2" value="2" /><label for="pg2" title="Make your character in advance &amp; be ready to play."> ROLL YOUR OWN: <em>bring 'em on.</em></label>
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
@@ -85,7 +85,7 @@
 	<td>
 		<input type="radio" name="q3" id="conflict0" value="0" /><label for="conflict0" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label>
 		<input type="radio" name="q3" id="conflict1" value="1" /><label for="conflict1" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label>
-		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses &amp; minuses, as do others."> FULL SPECTRUM: many paths negotiable.</label> 
+		<input type="radio" name="q3" id="conflict2" value="2" /><label for="conflict2" title="Your side has pluses &amp; minuses, as do others."> FULL SPECTRUM: ideals are relative.</label> 
 	</td>
 </tr>
 <tr>
@@ -111,7 +111,7 @@
 	<td>
 		<input type="radio" name="q7" id="combat0" value="0" /><label for="combat0" title="Big-picture description of scenes and outcomes."> QUALITATIVE: roles over rolls.</label>
 		<input type="radio" name="q7" id="combat1" value="1" /><label for="combat1" title="Play by play, based on roll results."> QUANTITATIVE: theater of the mind.</label>
-		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame based on positioning &amp; status effects."> TACTICAL: on a detailed battle mat.</label>
+		<input type="radio" name="q7" id="combat2" value="2" /><label for="combat2" title="Wargame-style with position-based effects."> TACTICAL: on a detailed battle mat.</label>
 	</td>
 </tr>
 <tr>	<th> House Rules<br />&amp; Tips</th> <td colspan="2"> <textarea name="t3" rows="3" placeholder="How We Roll: synopsis, links, &amp; other guidance" title="synopsis, links, other guidance"></textarea> </td> </tr>
