--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<input type="radio" name="q4" id="q41" value="1" /><label for="q41" title="Your side is the best one, undoubtedly."> BLACK &amp; WHITE: clear lines, good vs bad.</label>
 		<input type="radio" name="q4" id="q42" value="2" /><label for="q42" title="Your side is the lesser evil, probably."> GRAY &amp; GRAYER: ambiguity &amp; secrets.</label>
 		<input type="radio" name="q4" id="q43" value="3" /><label for="q43" title=""> FULL SPECTRUM: it's not about good &amp; bad.</label>
-		<input type="checkbox" name="c4a" id="c4a" value="1" /><label for="c4a" title=""> RED ALERT: deceit &amp; betrayal are allowed.</label>
+		<input type="checkbox" name="c4a" id="c4a" value="1" /><label for="c4a" title=""> RED ALERT: inter-player betrayal is allowed.</label>
 	</td>
 </tr>
 <tr>
