--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <tr>
 	<th title="1: How to make your Player Character (PC).">Character Creation</th>
 	<td>
-		<input type="radio" name="q2" id="q21" value="1" /><label for="pg0" title="The Game Master will bring characters for the group."> PREGENERATED: <em>read 'em &amp; weep.</em></label>
-		<input type="radio" name="q2" id="q22" value="2" /><label for="pg1" title="Collaborative creation adds character depth."> DAY ONE: made together as a group.</label>
-		<input type="radio" name="q2" id="q23" value="3" /><label for="pg2" title="Make your character in advance &amp; be ready to play."> ROLL YOUR OWN: <em>bring 'em on.</em></label>
+		<input type="radio" name="q2" id="q21" value="1" /><label for="q21" title="The Game Master will bring characters for the group."> PREGENERATED: <em>read 'em &amp; weep.</em></label>
+		<input type="radio" name="q2" id="q22" value="2" /><label for="q22" title="Collaborative creation adds character depth."> DAY ONE: made together as a group.</label>
+		<input type="radio" name="q2" id="q23" value="3" /><label for="q23" title="Make your character in advance &amp; be ready to play."> ROLL YOUR OWN: <em>bring 'em on.</em></label>
 		<input type="text" name="t2" id="t2" title="character creation instructions or link" />
 	</td>
 	<td>
