--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	label abbr { font-size: .5rem; color: #006600; }
 	input[type=radio],input[type=checkbox] { float: left; }
 	input:checked + label { opacity: 1; background-color: #ffff77; max-width: 26rem; white-space: unset; overflow: visible; }
-	input:checked + label abbr { display: block; white-space: normal; font-size: 1rem; padding-left: .5rem; }
+	input:checked + label abbr { display: block; white-space: normal; font-size: .9rem; padding-left: .5rem; }
 	textarea,input[type=text] { font-family: inherit; font-size: 96%; vertical-align: middle; text-align: left; width: 99%; border: none; white-space: auto; }
 	textarea:hover,input:hover { box-shadow: inset 0 0 1ex rgba(0,0,255,0.5); }
 	label:hover { box-shadow: 0 0 1ex rgba(0,0,255,0.5), inset 0 0 1ex rgba(0,0,255,0.5); }
